[gd_scene load_steps=2 format=3 uid="uid://cyoixp3u4bc6p"]

[ext_resource type="Script" uid="uid://2baldff8dgg3" path="res://engine/editor/EntityInspectorPopup.gd" id="1"]

[node name="EntityInspectorPopup" type="Panel"]
visible = false
offset_right = 320.0
offset_bottom = 240.0
mouse_filter = 2
script = ExtResource("1")

[node name="Scroll" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="Tabs" type="TabContainer" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0

[node name="Transform" type="VBoxContainer" parent="Scroll/Tabs"]
layout_mode = 2
theme_override_constants/separation = 6
metadata/_tab_index = 0

[node name="PosRow" type="HBoxContainer" parent="Scroll/Tabs/Transform"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="PosLabel" type="Label" parent="Scroll/Tabs/Transform/PosRow"]
layout_mode = 2
size_flags_stretch_ratio = 0.3
text = "Pos"

[node name="PosX" type="LineEdit" parent="Scroll/Tabs/Transform/PosRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "x"

[node name="PosY" type="LineEdit" parent="Scroll/Tabs/Transform/PosRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "y"

[node name="RotScaleRow" type="HBoxContainer" parent="Scroll/Tabs/Transform"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="RotLabel" type="Label" parent="Scroll/Tabs/Transform/RotScaleRow"]
layout_mode = 2
size_flags_stretch_ratio = 0.2
text = "Rot"

[node name="RotDeg" type="LineEdit" parent="Scroll/Tabs/Transform/RotScaleRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 2
placeholder_text = "deg"

[node name="ScaleLabel" type="Label" parent="Scroll/Tabs/Transform/RotScaleRow"]
layout_mode = 2
size_flags_stretch_ratio = 0.2
text = "Scale"

[node name="ScaleX" type="LineEdit" parent="Scroll/Tabs/Transform/RotScaleRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 2
placeholder_text = "x"

[node name="ScaleY" type="LineEdit" parent="Scroll/Tabs/Transform/RotScaleRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 2
placeholder_text = "y"

[node name="Data" type="VBoxContainer" parent="Scroll/Tabs"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 1

[node name="DataSubTabs" type="TabContainer" parent="Scroll/Tabs/Data"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0

[node name="TemplateTab" type="VBoxContainer" parent="Scroll/Tabs/Data/DataSubTabs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6
metadata/_tab_index = 0

[node name="TemplateContent" type="VBoxContainer" parent="Scroll/Tabs/Data/DataSubTabs/TemplateTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="Type" type="VBoxContainer" parent="Scroll/Tabs/Data/DataSubTabs/TemplateTab"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="DataId" type="Label" parent="Scroll/Tabs/Data/DataSubTabs/TemplateTab/Type"]
layout_mode = 2
text = "Data Id:"

[node name="TypeRow" type="HBoxContainer" parent="Scroll/Tabs/Data/DataSubTabs/TemplateTab/Type"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TypeLabel" type="Label" parent="Scroll/Tabs/Data/DataSubTabs/TemplateTab/Type/TypeRow"]
layout_mode = 2
size_flags_stretch_ratio = 0.3
text = "Type"

[node name="DataType" type="OptionButton" parent="Scroll/Tabs/Data/DataSubTabs/TemplateTab/Type/TypeRow"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="OpenData" type="Button" parent="Scroll/Tabs/Data/DataSubTabs/TemplateTab/Type"]
layout_mode = 2
text = "Open in Data Panel"

[node name="InstanceTab" type="VBoxContainer" parent="Scroll/Tabs/Data/DataSubTabs"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6
metadata/_tab_index = 1

[node name="Instance" type="VBoxContainer" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TagsRow" type="HBoxContainer" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TagsLabel" type="Label" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance/TagsRow"]
layout_mode = 2
size_flags_stretch_ratio = 0.35
text = "Instance Tags"

[node name="Tags" type="LineEdit" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance/TagsRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "csv tags"

[node name="SpriteRow" type="HBoxContainer" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SpriteLabel" type="Label" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance/SpriteRow"]
layout_mode = 2
size_flags_stretch_ratio = 0.35
text = "Sprite Override"

[node name="SpriteOverride" type="LineEdit" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance/SpriteRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "res://..."

[node name="SpriteLoad" type="Button" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance/SpriteRow"]
layout_mode = 2
text = "Load"

[node name="CollisionRow" type="HBoxContainer" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="CollisionLabel" type="Label" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance/CollisionRow"]
layout_mode = 2
size_flags_stretch_ratio = 0.35
text = "Collision Mask"

[node name="CollisionMask" type="LineEdit" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance/CollisionRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "mask"

[node name="LayerNames" type="Label" parent="Scroll/Tabs/Data/DataSubTabs/InstanceTab/Instance"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Layers:"
clip_text = true

[node name="TransformTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
